fix flexing issue, need to do stretch goals

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -65,7 +65,8 @@ h1, h2, h3, h4, h5 {
 
 /* Your code starts here! */
 body{
-	margin: 0 32%;
+	margin: auto;
+	width: 890px;
 }
 
 nav {
